# fm26_moneyball

./: .gitignore  README.md  agents.md  fm26_abbreviation_mapping.json  math_model.md  pyproject.toml
src/: __init__.py  constants.py  cost_score.py  family_scores.py  io.py  model_artifacts.py  parse_numeric.py  performance_score.py  pipeline.py  primitives.py  roles.py  shrinkage.py  standardize.py  team_adjustment.py  uncertainty.py  utils.py
src/ui/: app.py  diagnostics.py  overview.py  player_detail.py  presentation.py
tests/: conftest.py  test_additional_coverage.py  test_loader_and_parsing.py  test_model_components.py  test_pipeline.py  test_roles_and_primitives.py  test_ui.py  test_uncertainty.py
